framec/tests/snapshots/swift_snapshots__state_args.snap
---
source: framec/tests/swift_snapshots.rs
expression: "compile_fixture(\"04_state_args\", \"swift\")"
---
import Foundation

class StateArgsFrameEvent {
    var _message: String
    var _parameters: [Any]

    init(message: String, parameters: [Any] = []) {
        self._message = message
        self._parameters = parameters
    }
}

class StateArgsFrameContext {
    var _event: StateArgsFrameEvent
    var _return: Any?
    var _data: [String: Any] = [:]
    var _transitioned: Bool = false

    init(event: StateArgsFrameEvent, defaultReturn: Any? = nil) {
        self._event = event
        self._return = defaultReturn
    }
}

class StateArgsCompartment {
    var state: String
    var state_args: [Any] = []
    var state_vars: [String: Any] = [:]
    var enter_args: [Any] = []
    var exit_args: [Any] = []
    var forward_event: StateArgsFrameEvent?
    var parent_compartment: StateArgsCompartment?

    init(state: String) {
        self.state = state
    }

    func copy() -> StateArgsCompartment {
        let c = StateArgsCompartment(state: self.state)
        c.state_args = self.state_args
        c.state_vars = self.state_vars
        c.enter_args = self.enter_args
        c.exit_args = self.exit_args
        c.forward_event = self.forward_event
        c.parent_compartment = self.parent_compartment
        return c
    }
}

public class StateArgs {
    private var _state_stack: [StateArgsCompartment] = []
    private var __compartment: StateArgsCompartment
    private var __next_compartment: StateArgsCompartment? = nil
    private var _context_stack: [StateArgsFrameContext] = []

    init() {
        _state_stack = []
        _context_stack = []
        self.__compartment = StateArgs.__prepareEnter("Idle", [], [])
        self.__next_compartment = nil
    }

    func __frame_init() {
        let __e = StateArgsFrameEvent(message: "$>", parameters: __compartment.enter_args)
        let __ctx = StateArgsFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(__e)
        _context_stack.removeLast()
    }

    static func __create() -> StateArgs {
        let c = StateArgs()
        c.__frame_init()
        return c
    }

    private static func hsm_chain() -> [String: [String]] {
        return [
            "Idle": ["Idle"],
            "Holding": ["Holding"],
        ]
    }
    private static func __prepareEnter(_ leaf: String, _ state_args: [Any], _ enter_args: [Any]) -> StateArgsCompartment {
        var comp: StateArgsCompartment? = nil
        for name in StateArgs.hsm_chain()[leaf]! {
            let new_comp = StateArgsCompartment(state: name)
            new_comp.state_args = state_args
            new_comp.enter_args = enter_args
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!
    }
    private func __prepareExit(_ exit_args: [Any]) {
        var comp: StateArgsCompartment? = __compartment
        while comp != nil {
            comp!.exit_args = exit_args
            comp = comp!.parent_compartment
        }
    }

    private func __kernel(_ __e: StateArgsFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while __next_compartment != nil {
            let next_compartment: StateArgsCompartment = __next_compartment!
            __next_compartment = nil
            // Exit the current (leaf) state.
            let exit_event = StateArgsFrameEvent(message: "<$", parameters: __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            let forward_event: StateArgsFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = nil
            if forward_event == nil {
                // No forwarded event — synthesize a fresh $>.
                let enter_event = StateArgsFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
            } else if forward_event!._message == "$>" {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event!)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                let enter_event = StateArgsFrameEvent(message: "$>", parameters: __compartment.enter_args)
                __router(enter_event)
                __router(forward_event!)
            }
            for ctx in _context_stack {
                ctx._transitioned = true
            }
        }
    }

    private func __router(_ __e: StateArgsFrameEvent) {
        if __compartment.state == "Idle" {
            _state_Idle(__e, __compartment)
        } else if __compartment.state == "Holding" {
            _state_Holding(__e, __compartment)
        }
    }

    private func __transition(_ next: StateArgsCompartment) {
        __next_compartment = next
    }

    public func load(_ initial: Int) {
        let __e = StateArgsFrameEvent(message: "load", parameters: [initial])
        let __ctx = StateArgsFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(_context_stack[_context_stack.count - 1]._event)
        _context_stack.removeLast()
    }

    public func adjust(_ delta: Int) {
        let __e = StateArgsFrameEvent(message: "adjust", parameters: [delta])
        let __ctx = StateArgsFrameContext(event: __e)
        _context_stack.append(__ctx)
        __kernel(_context_stack[_context_stack.count - 1]._event)
        _context_stack.removeLast()
    }

    public func peek() -> Int {
        let __e = StateArgsFrameEvent(message: "peek", parameters: [])
        let __ctx = StateArgsFrameContext(event: __e, defaultReturn: 0)
        _context_stack.append(__ctx)
        __kernel(_context_stack[_context_stack.count - 1]._event)
        let __result = _context_stack[_context_stack.count - 1]._return as! Int
        _context_stack.removeLast()
        return __result
    }

    private func _state_Idle(_ __e: StateArgsFrameEvent, _ compartment: StateArgsCompartment) {
        if __e._message == "load" {
            self._s_Idle_hdl_user_load(__e, compartment)
            return
        }
    }

    private func _state_Holding(_ __e: StateArgsFrameEvent, _ compartment: StateArgsCompartment) {
        let value = (__compartment.state_args[0] as! NSNumber).intValue
        if __e._message == "adjust" {
            self._s_Holding_hdl_user_adjust(__e, compartment)
            return
        }
        if __e._message == "peek" {
            self._s_Holding_hdl_user_peek(__e, compartment)
            return
        }
    }

    private func _s_Idle_hdl_user_load(_ __e: StateArgsFrameEvent, _ compartment: StateArgsCompartment) {
        let initial = __e._parameters[0] as! Int
        let __compartment = StateArgs.__prepareEnter("Holding", [initial], [])
        __transition(__compartment)
        return
    }

    private func _s_Holding_hdl_user_adjust(_ __e: StateArgsFrameEvent, _ compartment: StateArgsCompartment) {
        let value = (compartment.state_args[0] as! NSNumber).intValue
        let delta = __e._parameters[0] as! Int
        let __compartment = StateArgs.__prepareEnter("Holding", [value + delta], [])
        __transition(__compartment)
        return
    }

    private func _s_Holding_hdl_user_peek(_ __e: StateArgsFrameEvent, _ compartment: StateArgsCompartment) {
        let value = (compartment.state_args[0] as! NSNumber).intValue
        _context_stack[_context_stack.count - 1]._return = value
    }
}
